<resources>
    <string name="app_name">hangman</string>
    <string name="play">Click to play</string>
    <string name="howTo">How to play</string>
    <string name="menu">Main Menu</string>
    <string name="human">Player vs Player</string>
    <string name="computer">Player vs Computer</string>
    <string name="empty"></string>
    <string name="tries">tries left: </string>
    <string name="guess">Input your guess</string>
    <string name="submit">Submit</string>
    <string name="restart">Restart</string>
    <string name="seven">7</string>
    <string name="choose">Write a word for your opponent to guess.</string>
    <string name='a'>A</string>
    <string name='b'>B</string>
    <string name='c'>C</string>
    <string name='d'>D</string>
    <string name='e'>E</string>
    <string name='f'>F</string>
    <string name='g'>G</string>
    <string name='h'>H</string>
    <string name='i'>I</string>
    <string name='j'>J</string>
    <string name='k'>K</string>
    <string name='l'>L</string>
    <string name='m'>M</string>
    <string name='n'>N</string>
    <string name='o'>O</string>
    <string name='p'>P</string>
    <string name='q'>Q</string>
    <string name='r'>R</string>
    <string name='s'>S</string>
    <string name='T'>T</string>
    <string name='u'>U</string>
    <string name='v'>V</string>
    <string name='w'>W</string>
    <string name='x'>X</string>
    <string name='y'>Y</string>
    <string name='z'>Z</string>

</resources>
